--- a/example/basic_usage/pubspec.yaml
+++ b/example/basic_usage/pubspec.yaml
@@ -20,8 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  scrollytell:
-    path: ../../../scrollytell
+  scrollytell: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
