--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: scrollytell
-description: This is a Flutter Package for creating animations that synchronize with scrolling. It uses CustomScrollView to check the scroll status and trigger scrollytelling events.This design concept can be applied in apps for Journalism, Sports, Business, Science, Medicine and many more.
-version: 1.0.0
+description: A flutter package to implement ScrollyTelling in your flutter app. Using ScrollyTell you can have the background changing dynamically as you scroll. ScrollyTell provides a mechanism to fully control this behaviour
+
+
+version: 1.0.1
 author: mdg-iitr<http://mdg.iitr.ac.in/>
 homepage: https://github.com/mdg-iitr/scrollytell.git
 
